--- a/about.html
+++ b/about.html
@@ -44,12 +44,12 @@
             </div>
             <div class="col-md-4">
                 <div class="text-center">
-                    <a href="../staceymarion/resume.html">
+                    <a href="..resume.html">
                         <button class = "btn btn-dark btn-lg">Resume</button>
                         </a>
                 </div>
                 <div class="text-center">
-                    <a href="../staceymarion/contact.html">
+                    <a href="..contact.html">
                         <button class = "btn btn-dark btn-lg">Contact</button>
                         </a>
                 </div>
