--- a/index.html
+++ b/index.html
@@ -34,34 +34,34 @@
 
     <div class="container">
         <div class="text-center">
-            <a href="../staceymarion/about.html">
+            <a href="about.html">
                 <button class = "btn btn-dark btn-lg">About</button>
                 </a>
 
     <div class="container">
         <div class="text-center">
-            <a href="../staceymarion/maps.html">
+            <a href="maps.html">
                 <button class = "btn btn-dark btn-lg">Maps</button>
                 </a>
 
     <div class="container">
         <div class="text-center">
-            <a href="../staceymarion/soon.html">
+            <a href="soon.html">
                 <button class = "btn btn-dark btn-lg">Fire</button>
                 </a>
     <div class="container">
         <div class="text-center">
-            <a href="../staceymarion/soon.html">
+            <a href="/soon.html">
                 <button class = "btn btn-dark btn-lg">Restoration</button>
                 </a>
     <div class="container">
         <div class="text-center">
-            <a href="../staceymarion/soon.html">
+            <a href="soon.html">
                 <button class = "btn btn-dark btn-lg">Endurance</button>
                 </a>
     <div class="container">
         <div class="text-center">
-            <a href="../staceymarion/soon.html">
+            <a href="soon.html">
                 <button class = "btn btn-dark btn-lg">Art</button>
                 </a>
 
