--- a/maps.html
+++ b/maps.html
@@ -37,12 +37,12 @@
                 <!-- Links to include in navbar -->
                 <ul class="nav navbar-nav">
                     <!-- Unordered list for links on navbar -->
-                    <li><a href="../staceymarion/about.html">About</a></li>
-                    <li><a href="../staceymarion/maps.html">Maps</a></li>
-                    <li><a href="../staceymarion/soon.html">Fire</a></li>
-                    <li><a href="../staceymarion/soon.html">Restoration</a></li>
-                    <li><a href="../staceymarion/soon.html">Endurance</a></li>
-                    <li><a href="../staceymarion/soon.html">Art</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="maps.html">Maps</a></li>
+                    <li><a href="soon.html">Fire</a></li>
+                    <li><a href="soon.html">Restoration</a></li>
+                    <li><a href="soon.html">Endurance</a></li>
+                    <li><a href="soon.html">Art</a></li>
                 </ul>
             </div> <!-- end .navbar-collapse -->
         </div> <!-- end .container -->
