--- a/resume.html
+++ b/resume.html
@@ -41,10 +41,10 @@
                     <!-- Unordered list for links on navbar -->
                     <li><a href="about.html">About</a></li>
                     <li><a href="maps.html">Maps</a></li>
-                    <li><a href="fire.html">Fire</a></li>
-                    <li><a href="restoration.html">Restoration</a></li>
-                    <li><a href="endurance.html">Endurance</a></li>
-                    <li><a href="art.html">Art</a></li>
+                    <li><a href="soon.html">Fire</a></li>
+                    <li><a href="soon.html">Restoration</a></li>
+                    <li><a href="soon.html">Endurance</a></li>
+                    <li><a href="soon.html">Art</a></li>
                 </ul>
             </div> <!-- end .navbar-collapse -->
         </div> <!-- end .container -->
