--- a/index.html
+++ b/index.html
@@ -4,66 +4,75 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="maps, cartography, prescribed fire, ecological restoration, nordic skiing, ultra running, trail running"/>
+    <meta name="keywords" content="maps, cartography, prescribed fire, ecological restoration, nordic skiing, ultra running, trail running, Stacey Marion"/>
 	<title>Stacey Marion</title>
 
     <!--put your Bootstrap stylesheet links below this comment and above style.css-->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
 </head>
 
 <body class="main">
 	<!-- Create blank at top-->
-    <div class="container blank">
+    <div class="container-fluid">
+        <div class="row" style="height:60px;"> <!-- bumper row -->
+        </div>
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-7">
+                <div class="jumbotron"> <!-- webpage title-->
+                    <div class="container">
+                        <h2> Stacey Marion </h2>
+                        <!--<p>Web page in progress.</p>-->
+                    </div>
+                </div>
             </div>
-        </div>
+            <div class="col-md-4 home">
+                <div class="container text-center">
+                        <a href="about.html">
+                            <button class = "btn btn-lg">About</button>
+                        </a>
+                </div>        
+                <div class="container text-center">
+                        <a href="maps.html">
+                            <button class = "btn btn-lg">Maps</button>
+                        </a>
+                       
+                <div class="container text-center">
+                        <a href="soon.html">
+                            <button class = "btn btn-lg">Fire</button>
+                        </a>
+                </div>        
+                
+                <div class="container text-cetner">
+                        <a href="/soon.html">
+                            <button class = "btn btn-lg">Restoration</button>
+                            </a>
+                </div>
+
+                <div class="container text-center">
+                        <a href="soon.html">
+                            <button class = "btn btn-lg">Endurance</button>
+                            </a>
+                </div>
+                <div class="container text-center">
+                        <a href="soon.html">
+                            <button class = "btn btn-lg">Art</button>
+                            </a>
+                </div>
+            </div>
+            <div class="col-md-1" style="width:auto;">
+                <div class="container">
+                </div>
+            </div>
+        </div>       
     </div>
-    <!-- Create jumbotron -->
-	<div class="jumbotron">
-		<div class="container">
-            <h2> Stacey Marion </h2>
-            <p>Web page in progress.</p>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="text-center">
-            <a href="about.html">
-                <button class = "btn btn-dark btn-lg">About</button>
-                </a>
-
-    <div class="container">
-        <div class="text-center">
-            <a href="maps.html">
-                <button class = "btn btn-dark btn-lg">Maps</button>
-                </a>
-
-    <div class="container">
-        <div class="text-center">
-            <a href="soon.html">
-                <button class = "btn btn-dark btn-lg">Fire</button>
-                </a>
-    <div class="container">
-        <div class="text-center">
-            <a href="/soon.html">
-                <button class = "btn btn-dark btn-lg">Restoration</button>
-                </a>
-    <div class="container">
-        <div class="text-center">
-            <a href="soon.html">
-                <button class = "btn btn-dark btn-lg">Endurance</button>
-                </a>
-    <div class="container">
-        <div class="text-center">
-            <a href="soon.html">
-                <button class = "btn btn-dark btn-lg">Art</button>
-                </a>
 
 
     <!--put your external script links here-->
