--- a/portfolio/pbc.html
+++ b/portfolio/pbc.html
@@ -11,60 +11,126 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-default">
-        <!-- Create the navbar -->  
-        <div class="container">
-            <div class="navbar">
-                <!-- Creates the navbar header -->
-                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-header" aria-expanded="false" aria-controls="navbar-header">
-                    <span class="sr-only">Toggle navigation</span>
-                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-list" xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd" d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" /></svg>
-                    <span class="menu"> Menu</span>
-                </button> <!-- Hamburger button for smaller devices -->
-                <a class="navbar-brand" href="../index.html"> <!-- Your website brand name -->
-                    <h2 class="brand">  Stacey Marion</h2>
-                </a>
-            </div>
+<body class="maps long">
+    <div class="container-fluid">
+        <div class="row" style="height:60px;"> <!-- bumper row -->
+        </div>
+    <!-- ADD BACK NAV BAR -->
+        <nav class="navbar navbar-expand-lg navbar-default">
+            <!-- Create the navbar -->  
+            <div class="container-fluid">
+                <div class="navbar">
+                    <!-- Creates the navbar header -->
+                    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-header" aria-expanded="false" aria-controls="navbar-header">
+                        <span class="sr-only">Toggle navigation</span>
+                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-list" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" /></svg>
+                        <span class="menu"> Menu</span>
+                    </button> <!-- Hamburger button for smaller devices -->
+                    <a class="navbar-brand" href="/index.html"> <!-- Your website brand name -->
+                        <h2 class="brand">  Stacey Marion</h2>
+                    </a>
+                </div>
 
-            <div id="navbar-header" class="collapse navbar-collapse">
-                <!-- Links to include in navbar -->
-                <ul class="nav navbar-nav">
-                    <!-- Unordered list for links on navbar -->
-                    <li><a href="../about.html">About</a></li>
-                    <li><a href="../maps.html">Maps</a></li>
-                    <li><a href="../soon.html">Fire</a></li>
-                    <li><a href="../soon.html">Restoration</a></li>
-                    <li><a href="../soon.html">Endurance</a></li>
-                    <li><a href="../soon.html">Art</a></li>
-                </ul>
-            </div> <!-- end .navbar-collapse -->
-        </div> <!-- end .container -->
-    </nav> <!-- end navigation bar --> 
+                <div id="navbar-header" class="collapse navbar-collapse">
+                    <!-- Links to include in navbar -->
+                    <ul class="nav navbar-nav">
+                        <!-- Unordered list for links on navbar -->
+                        <li><a href="/about.html">About</a></li>
+                        <li><a href="/soon.html">Fire</a></li>
+                        <li><a href="/soon.html">Restoration</a></li>
+                        <li><a href="/soon.html">Endurance</a></li>
+                        <li><a href="/soon.html">Art</a></li>
+                    </ul>
+                </div> <!-- end .navbar-collapse -->
+            </div> <!-- end .container -->
+        </nav> <!-- end navigation bar -->
+    </div>
+
+    <div class="jumbotron maps">
+		<div class="container">
+            <h3><a href="/maps.html">Maps</a></h3>
+        </div>
+    </div>
 
     <div class="resume">
     <div class="container">
         <div class="row">
-            <div class="offset-md-2 col-md-8 offset-md-2">
+            <div class="offset-md-1 col-md-10 offset-md-1">
                 <br>
                 <h2 class="portfolio-title">Pheasant Branch Conservancy, Wayfinding <br> <br> </h2>
                 <p class="portfolio-description">
+                    <i> Wayfinding in Pheasant Branch Conservancy</i>  was produced as a digital and printed (11x17”) wayfinding map for the Pheasant Branch Conservancy in the City of Middleton. The map is meant to evoke aesthetic appreciation for the Conservancy, as well as serve function. The map is illustrative of the colors of the Conservancy, as it incorporates general natural vegetation cover types and water features in nearly true color and incorporates symbols with a natural color scheme. 
+                    <br><br>
+                    The map identifies cultural features (parking, bathrooms, and physical map locations) and natural features like springs, effigy mounds, and surface water contribute to the conveyed uniqueness of the Pheasant Branch Conservancy. Trails are the main feature of the map, and the primary mechanism for how visitors interact with the Conservancy.  With multiple types of users (pedestrians, bikers, runners, birdwatchers), it was important to highlight trail surface as a mechanism of displaying trails closed to bikes. 
+                    <br><br>
+                    <i>Wayfinding in Pheasant Branch Conservancy</i> was produced in conjunction with an update of the City of Middleton’s Pheasant Branch Conservancy: Bock Forest interpretive signage, and an Addendum to the Bock Forest Management Plan, written as an employee of Adaptive Restoration, LLC. The written Addendum serves as a management plan for City staff, whereas the panels and wayfinding map were produced for Conservancy visitors and are displayed at the Bock Forest kiosk. 
                 </p>
             </div>
         </div>
         <div class="row">
-            <div class="offset-md-3 col-md-6 offset-md-3 portfolio-image">
+            <div class="offset-md-2 col-md-8 offset-md-2 portfolio-image">
                 <a href="../assets/pbcW.jpg"><img src="../assets/pbcW.jpg" alt="Pheasant Branch Conservancy Wayfinding" class="img-responsive center-block pbc" width="100%" /></a>
             </div>
         </div>
-        <div class="container">
-        </div>     
+        <div class="row" style="height:60px;">
+        </div>
+        <div class="row">
+            <div class="offset-md-2 col-md-8 offset-md-2 portfolio-image">
+                <a href="../assets/panels_1.jpg"><img src="../assets/panels_1.jpg" alt="Bock Forest Interpretive Panels" class="img-responsive center-block pbc" width="100%" /></a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="offset-md-2 col-md-8 offset-md-2 portfolio-image">
+                <a href="../assets/panels_2.jpg"><img src="../assets/panels_2.jpg" alt="Bock Forest Interpretive Panels" class="img-responsive center-block pbc" width="100%" /></a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="offset-md-2 col-md-8 offset-md-2 portfolio-image">
+                <a href="../assets/panels_3.jpg"><img src="../assets/panels_3.jpg" alt="Bock Forest Interpretive Panels" class="img-responsive center-block pbc" width="100%" /></a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="offset-md-2 col-md-8 offset-md-2 portfolio-image">
+                <a href="../assets/panels_4.jpg"><img src="../assets/panels_4.jpg" alt="Bock Forest Interpretive Panels" class="img-responsive center-block pbc" width="100%" /></a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="offset-md-2 col-md-8 offset-md-2 portfolio-image">
+                <a href="../assets/panels_5.jpg"><img src="../assets/panels_5.jpg" alt="Bock Forest Interpretive Panels" class="img-responsive center-block pbc" width="100%" /></a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="offset-md-2 col-md-8 offset-md-2 portfolio-image">
+                <a href="../assets/panels_6.jpg"><img src="../assets/panels_6.jpg" alt="Bock Forest Interpretive Panels" class="img-responsive center-block pbc" width="100%" /></a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="offset-md-2 col-md-8 offset-md-2 portfolio-image">
+                <a href="../assets/panels_7.jpg"><img src="../assets/panels_7.jpg" alt="Bock Forest Interpretive Panels" class="img-responsive center-block pbc" width="100%" /></a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="offset-md-2 col-md-8 offset-md-2 portfolio-image">
+                <a href="../assets/panels_8.jpg"><img src="../assets/panels_8.jpg" alt="Bock Forest Interpretive Panels" class="img-responsive center-block pbc" width="100%" /></a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="offset-md-2 col-md-8 offset-md-2 portfolio-image">
+                <a href="../assets/panels_9.jpg"><img src="../assets/panels_9.jpg" alt="Bock Forest Interpretive Panels" class="img-responsive center-block pbc" width="100%" /></a>
+            </div>
+        </div>
+        <div class="row" style="height:60px;">
+        </div>
+    
     </div>
     </div>
 
