--- a/about.html
+++ b/about.html
@@ -14,37 +14,66 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
 </head>
 
-<body>
-	<!-- Create blank at top-->
-    <div class="container blank">
-        <div class="row">
-            <div class="col-md-12">
-            </div>
+<body class="about">
+    <div class="container-fluid">
+        <div class="row" style="height:60px;"> <!-- bumper row -->
         </div>
+    <!-- ADD BACK NAV BAR -->
+        <nav class="navbar navbar-expand-lg navbar-default">
+            <!-- Create the navbar -->  
+            <div class="container-fluid">
+                <div class="navbar">
+                    <!-- Creates the navbar header -->
+                    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-header" aria-expanded="false" aria-controls="navbar-header">
+                        <span class="sr-only">Toggle navigation</span>
+                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-list" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" /></svg>
+                        <span class="menu"> Menu</span>
+                    </button> <!-- Hamburger button for smaller devices -->
+                    <a class="navbar-brand" href="index.html"> 
+                        <h2 class="brand large">Stacey Marion</h2>
+                    </a>
+                </div>
+
+                <div id="navbar-header" class="collapse navbar-collapse">
+                    <!-- Links to include in navbar -->
+                    <ul class="nav navbar-nav">
+                        <!-- Unordered list for links on navbar -->
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="maps.html">Maps</a></li>
+                        <li><a href="soon.html">Fire</a></li>
+                        <li><a href="soon.html">Restoration</a></li>
+                        <li><a href="soon.html">Endurance</a></li>
+                        <li><a href="soon.html">Art</a></li>
+                    </ul>
+                </div> <!-- end .navbar-collapse -->
+            </div> <!-- end .container -->
+        </nav> <!-- end navigation bar -->
     </div>
 
     <!-- Create jumbotron -->
-	<div class="jumbotron">
+	<!-- <div class="jumbotron maps">
 		<div class="container">
-            <h2> Stacey Marion </h2>
-            <p>Web page in progress.</p>
+            <h3><a href="/index.html">Stacey Marion</a></h3>
         </div>
-    </div>
+    </div> -->
 
     <div class="container">
+        <div class="row" style="height:10px;"> <!-- bumper row -->
+        </div>
+
         <div class="row">
-            <div class="col-md-6">
-                <div class="card">
-                    <a href="portfolio/about.html">
-                        <img class="card-img-top" src="assets/about_thumbnail.png" alt="Portrait">
-					</a>
-                </div>
-            </div>
-            <div class="col-md-4">
+            <div class="col-md-6 resume">
                 <div class="text-center">
-                    <a href="resume.html">
+                    <a href="/assets/Marion_Stacey_resume_web.pdf" target="_blank">
                         <button class = "btn btn-dark btn-lg">Resume</button>
                         </a>
                 </div>
@@ -52,6 +81,13 @@
                     <a href="contact.html">
                         <button class = "btn btn-dark btn-lg">Contact</button>
                         </a>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card circle">
+                    <!--<a href="portfolio/about.html">-->
+                        <img class="card-img-top" src="assets/DSC00968-2.png" alt="Portrait">
+					<!--</a>-->
                 </div>
             </div>
     </div>
