--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         </a>
                        
                 <div class="container text-center">
-                        <a href="soon.html">
+                        <a href="fire.html">
                             <button class = "btn btn-lg">Fire</button>
                         </a>
                 </div>        
