--- a/maps.html
+++ b/maps.html
@@ -84,7 +84,7 @@
             <div class="col-md-4 maps">
                 <div class="card maps">
                     <a href="portfolio/veracruz.html">
-                        <img class="card-img-top" src="assets/veracruz_thumbnail.png" alt="From Veracruz to Wisconsin"></a>
+                        <img class="card-img-top" src="assets/veracruz_thumbnail.PNG" alt="From Veracruz to Wisconsin"></a>
                     <div class="card-body">
                         <h4 class="card-title"></h4>
                         <a href="portfolio/veracruz.html" class="btn btn-secondary btn-block">From Veracruz to Wisconsin</a>
@@ -95,7 +95,7 @@
             <div class="col-md-4 maps">
                 <div class="card maps">
                     <a href="portfolio/wildfire2.html">
-                        <img class="card-img-top" src="assets/wildfire_storymap_thumbnail.png" alt="Wildfire at the Backdoor"></a>
+                        <img class="card-img-top" src="assets/wildfire_storymap_thumbnail.PNG" alt="Wildfire at the Backdoor"></a>
                     <div class="card-body">
                         <h4 class="card-title"></h4>
                         <a href="portfolio/wildfire2.html" class="btn btn-secondary btn-block">Wildfire at the Backdoor</a>
