--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                         <!-- Unordered list for links on navbar -->
                         <li><a href="about.html">About</a></li>
                         <li><a href="maps.html">Maps</a></li>
-                        <li><a href="soon.html">Fire</a></li>
+                        <li><a href="fire.html">Fire</a></li>
                         <li><a href="soon.html">Restoration</a></li>
                         <li><a href="soon.html">Endurance</a></li>
                         <li><a href="soon.html">Art</a></li>
