--- a/portfolio/wi_prevention.html
+++ b/portfolio/wi_prevention.html
@@ -45,7 +45,7 @@
                     <ul class="nav navbar-nav">
                         <!-- Unordered list for links on navbar -->
                         <li><a href="/about.html">About</a></li>
-                        <li><a href="/soon.html">Fire</a></li>
+                        <li><a href="/fire.html">Fire</a></li>
                         <li><a href="/soon.html">Restoration</a></li>
                         <li><a href="/soon.html">Endurance</a></li>
                         <li><a href="/soon.html">Art</a></li>
