--- a/contact.html
+++ b/contact.html
@@ -69,8 +69,8 @@
     <div class="row">
         <div class="text-center" style="color:white; font-family:'Montserrat';">
             <div class="offset-md-1 col-md-10 offset-md-1">
-                <h3><strong>Email:</strong> smarion@wisc.edu</h3>
                 <h3><strong>Instagram:</strong> <a href="https://www.instagram.com/stacemarion/" target="_blank"> @stacemarion</a></h3>
+                <h3><strong>LinkedIn</strong> <a href="www.linkedin.com/in/stacey-marion" target="_blank"> linkedin.com/in/stacey-marion</a></h3>
             </div>
         </div>
     </div>
