--- a/fire.html
+++ b/fire.html
@@ -81,7 +81,7 @@
             </div>
         </div>
             <div class="row" style="margin:20px;"> 
-                    <iframe src="https://staceymarion.github.io/burnProgram/" width="100%" height="750px" frameborder="0" allow="geolocation"></iframe></a></li>
+                    <iframe src="https://staceymarion.com/burnProgram/" width="100%" height="750px" frameborder="0" allow="geolocation"></iframe></a></li>
             </div>
             <div class="row" style="height:60px;"> <!-- bumper row -->
             </div>
@@ -96,7 +96,7 @@
             </div>
         </div>
         <div class="row" style="margin:20px;"> 
-            <iframe src="https://staceymarion.github.io/fna/" width="100%" height="750px" frameborder="0" allow="geolocation"></iframe></a></li>
+            <iframe src="https://staceymarion.com/fna/" width="100%" height="750px" frameborder="0" allow="geolocation"></iframe></a></li>
     </div>
     </div>
 
