--- a/about.html
+++ b/about.html
@@ -73,13 +73,18 @@
         <div class="row">
             <div class="col-md-6 resume">
                 <div class="text-center">
-                    <a href="/assets/Marion_Stacey_resume_web.pdf" target="_blank">
+                    <a href="/assets/Marion_Stacey_resume_web.pdf" target="_blank" rel="noopener noreferrer">
                         <button class = "btn btn-dark btn-lg">Resume</button>
                         </a>
                 </div>
                 <div class="text-center">
-                    <a href="contact.html">
+                    <a href="contact.html" target="_blank" rel="noopener noreferrer">
                         <button class = "btn btn-dark btn-lg">Contact</button>
+                        </a>
+                </div>
+                <div class="text-center">
+                    <a href="https://github.com/staceymarion" target="_blank" rel="noopener noreferrer">
+                        <button class = "btn btn-dark btn-lg">Code repos</button>
                         </a>
                 </div>
             </div>
