--- a/about.html
+++ b/about.html
@@ -48,10 +48,10 @@
                     <ul class="nav navbar-nav">
                         <!-- Unordered list for links on navbar -->
                         <li><a href="about.html">About</a></li>
-                        <li><a href="maps.html">Maps</a></li>
+                        <li><a href="maps.html">Portfolio</a></li>
                         <li><a href="fire.html">Fire</a></li>
                         <li><a href="soon.html">Restoration</a></li>
-                        <li><a href="soon.html">Endurance</a></li>
+                        <li><a href="run.html">Endurance</a></li>
                         <li><a href="soon.html">Art</a></li>
                     </ul>
                 </div> <!-- end .navbar-collapse -->
@@ -82,11 +82,11 @@
                         <button class = "btn btn-dark btn-lg">Contact</button>
                         </a>
                 </div>
-                <div class="text-center">
+              <!--   <div class="text-center">
                     <a href="https://github.com/staceymarion" target="_blank" rel="noopener noreferrer">
                         <button class = "btn btn-dark btn-lg">Code repos</button>
                         </a>
-                </div>
+                </div> -->
             </div>
             <div class="col-md-6">
                 <div class="card circle">
@@ -94,6 +94,10 @@
                         <img class="card-img-top" src="assets/DSC00968-4.png" alt="Portrait">
 					<!--</a>-->
                 </div>
+            </div>
+            <div class="col-md-10 text-center">
+                <br><br><br><br><br><br>
+                <p style="color:white; font-family:Montserrat;">portrait by <a href="https://activelifephotography.com/" target="_blank" rel="noopener noreferrer"> activelifephotography</a></p>
             </div>
     </div>
 
