--- a/fire.html
+++ b/fire.html
@@ -48,10 +48,10 @@
                     <ul class="nav navbar-nav">
                         <!-- Unordered list for links on navbar -->
                         <li><a href="about.html">About</a></li>
-                        <li><a href="maps.html">Maps</a></li>
+                        <li><a href="maps.html">Portfolio</a></li>
                         <li><a href="fire.html">Fire</a></li>
                         <li><a href="soon.html">Restoration</a></li>
-                        <li><a href="soon.html">Endurance</a></li>
+                        <li><a href="run.html">Endurance</a></li>
                         <li><a href="soon.html">Art</a></li>
                     </ul>
                 </div> <!-- end .navbar-collapse -->
@@ -59,7 +59,7 @@
         </nav> <!-- end navigation bar -->
     </div>
 
-    <div class="jumbotron">
+    <div class="jumbotron maps">
         <div class="container">
             <h3>Fire</h3>
         </div>
@@ -70,32 +70,32 @@
             <div class="row fire">
                 <div class="offset-md-1 col-md-10 offset-md-1">
                     <p class="portfolio-description">
-                        I previously worked as a fire practitioner, participating in over 200 prescribed burns in Wisconsin. I currently serve on the Board of the Wisconsin Prescribed Fire Council.
+                        I am an advocate of "good fire" as a tool for conserving natural areas. I currently serve on the Board of the <a href="https://prescribedfire.org/" target="_blank" rel="noopener noreferrer"> Wisconsin Prescribed Fire Council</a>, where I strive to implement initiatives increasing prescribed burn capacity in the state. I previously worked as a fire practitioner, participating in over 200 prescribed burns in Wisconsin. I will be stepping down as Vice Chair this December as I transition to my new home in Washington State. 
                     </p> 
                     <br><br>
-                    <h2 class="portfolio-title">A look at certified prescribed burn programs across the country<br> </h2>
+                    <h2 class="portfolio-title">WEB MAP: A look at certified prescribed burn programs across the country<br> </h2>
                     <p class="portfolio-description">
                         <a href="https://staceymarion.github.io/burnProgram/" target="_blank" rel="noopener noreferrer">See full webpage here.</a>  
                     </p> 
                 </div>   
             </div>
         </div>
-            <div class="row" style="margin:20px;"> 
-                    <iframe src="https://staceymarion.com/burnProgram/" width="100%" height="750px" frameborder="0" allow="geolocation"></iframe></a></li>
+            <div class="row" style="margin-left:10%; margin-right:10%;"> 
+                    <iframe src="https://staceymarion.com/burnProgram/"  width = 100%  height="750px" frameborder="0" allow="geolocation"></iframe></a></li>
             </div>
             <div class="row" style="height:60px;"> <!-- bumper row -->
             </div>
          <div class="container">
             <div class="row fire">
                 <div class="offset-md-1 col-md-10 offset-md-1">
-                    <h2 class="portfolio-title">A prescribed fire needs assessment for Wisconsin<br> </h2>
+                    <h2 class="portfolio-title">WEB STORY: A prescribed fire needs assessment for Wisconsin<br> </h2>
                     <p class="portfolio-description">
                         <a href="https://staceymarion.github.io/fna/" target="_blank" rel="noopener noreferrer">See full webpage here.</a>  
                     </p> 
                 </div>   
             </div>
         </div>
-        <div class="row" style="margin:20px;"> 
+        <div class="row" style="margin-left:10%; margin-right:10%;"> 
             <iframe src="https://staceymarion.com/fna/" width="100%" height="750px" frameborder="0" allow="geolocation"></iframe></a></li>
     </div>
     </div>
