--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>        
                 <div class="container text-center">
                         <a href="maps.html">
-                            <button class = "btn btn-lg">Maps</button>
+                            <button class = "btn btn-lg">Portfolio</button>
                         </a>
                        
                 <div class="container text-center">
@@ -57,7 +57,7 @@
                 </div>
 
                 <div class="container text-center">
-                        <a href="soon.html">
+                        <a href="run.html">
                             <button class = "btn btn-lg">Endurance</button>
                             </a>
                 </div>
