--- a/maps.html
+++ b/maps.html
@@ -48,7 +48,7 @@
                     <ul class="nav navbar-nav">
                         <!-- Unordered list for links on navbar -->
                         <li><a href="about.html">About</a></li>
-                        <li><a href="maps.html">Maps</a></li>
+                        <li><a href="maps.html">Portfolio</a></li>
                         <li><a href="fire.html">Fire</a></li>
                         <li><a href="soon.html">Restoration</a></li>
                         <li><a href="soon.html">Endurance</a></li>
@@ -61,14 +61,43 @@
 	
 	<div class="jumbotron maps">
 		<div class="container">
-            <h3>Maps </h3>
+            <h3>Portfolio </h3>
         </div>
     </div>
 
 	<div class="resume">
     <div class="container">
-        <div class="row"> <!-- first row of maps-->
-            
+        <div class="row fire"> <!-- interactive maps, 2 wide-->
+            <div class="offset-md-1 col-md-10 offset-md-1">
+                <h2 class="portfolio-title" style="font-size:22px;">Code is accessible on <a href="https://github.com/staceymarion" target="_blank" rel="noopener noreferrer">github</a></h2>
+                <br><br> 
+            </div> 
+
+
+            <div class="col-md-6 maps">
+                <div class="card maps">
+                    <a href="https://staceymarion.com/burnProgram/" target="_blank" rel="noopener noreferrer">
+                        <img class="card-img-top" src="assets/burn1.PNG" alt="Prescribed Fire: What Are Other States Doing?"></a>
+                    <div class="card-body">
+                        <h4 class="card-title"></h4>
+                        <a href="https://staceymarion.com/burnProgram/" target="_blank" rel="noopener noreferrer" class="btn btn-secondary btn-block">Prescribed fire organization across the US <i>(webmap)</i></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 maps">
+                <div class="card maps">
+                    <a href="https://staceymarion.com/fna/" target="_blank" rel="noopener noreferrer">
+                        <img class="card-img-top" src="assets/fna2.PNG" alt="Wisconsin Fire Needs Assessment"></a>
+                    <div class="card-body">
+                        <h4 class="card-title"></h4>
+                        <a href="https://staceymarion.com/fna/" target="_blank" rel="noopener noreferrer" class="btn btn-secondary btn-block">Wisconsin Fire Needs Assessment <br><i>(web story)</i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row fire"> <!-- first row of 3-way maps-->
             <div class="col-md-4 maps">
                 <div class="card maps">
                     <a href="portfolio/pbc.html"> 
@@ -87,7 +116,7 @@
                         <img class="card-img-top" src="assets/veracruz_thumbnail.PNG" alt="From Veracruz to Wisconsin"></a>
                     <div class="card-body">
                         <h4 class="card-title"></h4>
-                        <a href="portfolio/veracruz.html" class="btn btn-secondary btn-block">From Veracruz to Wisconsin</a>
+                        <a href="portfolio/veracruz.html" class="btn btn-secondary btn-block">From Veracruz to Wisconsin <i>(storymap)</i></a>
                     </div>
                 </div>
             </div>
@@ -98,14 +127,11 @@
                         <img class="card-img-top" src="assets/wildfire_storymap_thumbnail.png" alt="Wildfire at the Backdoor"></a>
                     <div class="card-body">
                         <h4 class="card-title"></h4>
-                        <a href="portfolio/wildfire2.html" class="btn btn-secondary btn-block">Wildfire at the Backdoor</a>
+                        <a href="portfolio/wildfire2.html" class="btn btn-secondary btn-block">Wildfire at the Backdoor<i>(storymap)</i></a>
                     </div>
                 </div>
             </div>
-
-
         </div>
-        
         <div class="row"> <!-- second row of maps -->
             <div class="col-md-4 maps">
                 <div class="card maps">
