--- a/portfolio/veracruz.html
+++ b/portfolio/veracruz.html
@@ -68,7 +68,7 @@
                 <br>
                 <h2 class="portfolio-title">From Veracruz to Wisconsin<br> <br> </h2>
                 <p class="portfolio-description">
-                    This storymap conveys the stories of several interlopers working in Wisconsin's dairy industry. The characters are pseudonyms, however, reflect the true stories of immigrants interviewed by Dustin Cohan, PhD candidate. 
+                    This storymap conveys the stories of several interlopers working in Wisconsin's dairy industry. The characters are pseudonyms, however, reflect the true stories of immigrants interviewed by Dustin Cohan, PhD candidate. (viewable with an ArcGIS online account)
                 </p> 
             </div>   
             <div class="col-md-12"> 
